--- a/feature-repositories/src/main/res/layout/fragment_list.xml
+++ b/feature-repositories/src/main/res/layout/fragment_list.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="viewModel"
-            type="com.ezzyapps.test.repositories.ui.ThumbsListViewModel" />
+            type="com.ezzyapps.test.repositories.ui.imageslist.ThumbsListViewModel" />
 
     </data>
 
-    <FrameLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:padding="1dp">
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="4dp"
+            app:onSearch="@{viewModel.doOnSearch}"
+            app:query="@{viewModel.query}" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
@@ -25,23 +33,18 @@
             app:layout="@{@layout/item_thumb}" />
 
         <androidx.core.widget.ContentLoadingProgressBar
-            style="@style/Widget.AppCompat.ProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:visible="@{viewModel.isLoading}"
-            tools:visibility="visible" />
+            app:visible="@{viewModel.isLoading}" />
 
         <com.google.android.material.textview.MaterialTextView
-            style="@style/TextAppearance.MaterialComponents.Caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@{viewModel.errorMsg}"
-            app:visible="@{viewModel.errorMsgVisibility}"
-            tools:text="Some error message!!!"
-            tools:visibility="visible" />
+            app:visible="@{viewModel.errorMsgVisibility}" />
 
-    </FrameLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </layout>
