Create landscape layout for details screen

--- a/feature-repositories/src/main/res/layout-land/fragment_details.xml
+++ b/feature-repositories/src/main/res/layout-land/fragment_details.xml
@@ -13,31 +13,30 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
-        app:visible="@{viewModel.image != null}"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:visible="@{viewModel.image != null}">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/middleGuideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             app:layout_constraintGuide_percent="0.6" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="36dp"
-            android:padding="16dp"
-            app:layout_constraintBottom_toTopOf="@id/middleGuideline"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/middleGuideline"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageFull"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:scaleType="fitCenter"
                 app:errorRes="@{viewModel.image.error}"
@@ -53,9 +52,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/userName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/middleGuideline">
+            app:layout_constraintStart_toEndOf="@id/middleGuideline">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
@@ -143,10 +142,11 @@
             android:layout_height="wrap_content"
             android:paddingVertical="16dp"
             android:text="@{viewModel.image.name}"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageStats"
-            tools:text="by Mad rabbit" />
+            app:layout_constraintStart_toStartOf="@id/middleGuideline"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="created by Mad rabbit" />
 
         <TextView
             android:id="@+id/imageTags"
@@ -155,8 +155,8 @@
             android:paddingVertical="16dp"
             android:text="@{viewModel.image.tags}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/userName"
+            app:layout_constraintStart_toStartOf="@id/middleGuideline"
+            app:layout_constraintTop_toBottomOf="@+id/userName"
             tools:text="garden fruits apple" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
