--- a/feature-repositories/src/main/res/layout/fragment_details.xml
+++ b/feature-repositories/src/main/res/layout/fragment_details.xml
@@ -27,8 +27,8 @@
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_margin="36dp"
-            android:padding="16dp"
+            android:layout_margin="@dimen/padding_xlarge"
+            android:padding="@dimen/padding_normal"
             app:layout_constraintBottom_toTopOf="@id/middleGuideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
                 android:id="@+id/imageFull"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="16dp"
+                android:layout_margin="@dimen/padding_normal"
                 android:scaleType="fitCenter"
                 app:errorRes="@{viewModel.image.error}"
                 app:imageRes="@{viewModel.image.placeholder}"
@@ -61,15 +61,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="8dp">
+                android:paddingHorizontal="@dimen/padding_normal"
+                android:paddingVertical="@dimen/padding_small">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/likesIcon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="@dimen/padding_small"
                     app:srcCompat="@drawable/likes" />
 
                 <TextView
@@ -78,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@{viewModel.image.likes}"
-                    android:textSize="12sp"
+                    android:textSize="@dimen/text_size_small"
                     tools:text="234" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -87,15 +87,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="8dp">
+                android:paddingHorizontal="@dimen/padding_normal"
+                android:paddingVertical="@dimen/padding_small">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/downloadsIcon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="@dimen/padding_small"
                     app:srcCompat="@drawable/downloads" />
 
                 <TextView
@@ -104,7 +104,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@{viewModel.image.downloads}"
-                    android:textSize="12sp"
+                    android:textSize="@dimen/text_size_small"
                     tools:text="23456" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -113,15 +113,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="8dp">
+                android:paddingHorizontal="@dimen/padding_normal"
+                android:paddingVertical="@dimen/padding_small">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/commentsIcon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="@dimen/padding_small"
                     app:srcCompat="@drawable/comments" />
 
                 <TextView
@@ -130,7 +130,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@{viewModel.image.comments}"
-                    android:textSize="12sp"
+                    android:textSize="@dimen/text_size_small"
                     tools:text="23" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -141,7 +141,7 @@
             android:id="@+id/userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingVertical="16dp"
+            android:paddingVertical="@dimen/padding_normal"
             android:text="@{viewModel.image.name}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -152,7 +152,7 @@
             android:id="@+id/imageTags"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingVertical="16dp"
+            android:paddingVertical="@dimen/padding_normal"
             android:text="@{viewModel.image.tags}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
