--- a/feature-repositories/src/main/res/layout/fragment_list.xml
+++ b/feature-repositories/src/main/res/layout/fragment_list.xml
@@ -21,7 +21,7 @@
             android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="4dp"
+            android:layout_marginVertical="@dimen/padding_tiny"
             app:onSearch="@{viewModel.doOnSearch}"
             app:query="@{viewModel.query}" />
 
