--- a/feature-repositories/src/main/res/layout/item_thumb.xml
+++ b/feature-repositories/src/main/res/layout/item_thumb.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="@{() -> viewModel.doOnClick.invoke()}"
-        android:padding="2dp">
+        android:padding="@dimen/padding_micro">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/thumbImage"
@@ -45,10 +45,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="end"
-            android:padding="4dp"
+            android:padding="@dimen/padding_tiny"
             android:text="@{viewModel.name}"
             android:textColor="#FFEC00"
-            android:textSize="11sp"
+            android:textSize="@dimen/text_size_small"
             app:layout_constraintBottom_toTopOf="@id/thumbTags"
             app:layout_constraintEnd_toEndOf="@+id/thumbImage"
             app:layout_constraintStart_toStartOf="@+id/thumbImage"
@@ -60,10 +60,10 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:gravity="start"
-            android:padding="4dp"
+            android:padding="@dimen/padding_tiny"
             android:text="@{viewModel.tags}"
             android:textColor="@android:color/white"
-            android:textSize="11sp"
+            android:textSize="@dimen/text_size_small"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/thumbImage"
             app:layout_constraintStart_toStartOf="@+id/thumbImage"
