--- a/feature-repositories/src/main/res/layout/item_thumb.xml
+++ b/feature-repositories/src/main/res/layout/item_thumb.xml
@@ -7,23 +7,24 @@
 
         <variable
             name="viewModel"
-            type="com.ezzyapps.test.repositories.ui.imageslist.ThumbItemViewModel" />
+            type="com.ezzyapps.test.repositories.ui.imageslist.PreviewItemViewModel" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="@{() -> viewModel.doOnClick.invoke()}"
+        tools:layout_width="200dp"
         android:padding="@dimen/padding_micro">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/thumbImage"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitCenter"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
             app:errorRes="@{viewModel.error}"
-            app:imageRes="@{viewModel.placeholder}"
+            app:onFinished="@{viewModel.onLoadingFinished}"
             app:imageUrl="@{viewModel.url}"
             app:size="@{viewModel.size}"
             app:layout_constraintBottom_toTopOf="@id/thumbTags"
@@ -32,6 +33,7 @@
             tools:src="@drawable/test_image_preview" />
 
         <FrameLayout
+            android:id="@+id/frameLayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="#B3939090"
@@ -64,10 +66,22 @@
             android:text="@{viewModel.tags}"
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_size_small"
+            android:lines="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/thumbImage"
             app:layout_constraintStart_toStartOf="@+id/thumbImage"
             tools:text="fruits vegetables cakes gardening nature animals drinking warming" />
+
+        <View
+            android:id="@+id/loadingIndicator"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:background="@drawable/bg_placeholder"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:visible="@{viewModel.loading}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
